# gem

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
assets/certificates/: gem.crt  gem.key
src/app/: CMakeLists.txt
src/app-android/: build.gradle
src/app-android/app/: build.gradle
src/app-android/app/src/main/: AndroidManifest.xml
src/app-android/app/src/main/java/com/trider/gem/: MainActivity.java
src/app-android/gradle/wrapper/: gradle-wrapper.properties
src/app/include/: App.hpp  AppContext.hpp  AppWindow.hpp  GeminiClient.hpp  GemtextParser.hpp  Page.hpp  StatusCode.hpp  Tab.hpp  Utilities.hpp
src/app/src/: App.cpp  AppContext.cpp  AppWindow.cpp  GeminiClient.cpp  GemtextParser.cpp  ImGuiSDLHelper.hpp  MainWindow.cpp  MainWindow.hpp  Page.cpp  Tab.cpp  main.cpp
tools/scripts/: vcpkg_install_third_parties.py
